# usv-uav-marine-coverage

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BUGFIX.md  README.md  pyproject.toml  scratch.py  scratch2.py
configs/: aoi_energy_auction_allocator.toml  astar_smoother_baseline.toml  baseline_patrol_rho_failure_hotspot_first_soft_partition_usv1_failure.toml  cost_aware_allocator.toml  cost_aware_uav_persistent_multi_region.toml  distributed_cbba_allocator.toml  distributed_overlap_pressure_cost_aware_weighted_voronoi.toml  distributed_overlap_pressure_distributed_cbba_bundle2_memory_compare_3seed.toml  distributed_overlap_pressure_distributed_cbba_bundle_compare_3seed.toml  distributed_overlap_pressure_distributed_cbba_memory_compare_3seed.toml  distributed_overlap_pressure_distributed_cbba_range_compare_3seed.toml  distributed_overlap_pressure_distributed_cbba_weighted_voronoi.toml  distributed_overlap_pressure_distributed_cbba_weighted_voronoi_bundle2.toml  distributed_overlap_pressure_distributed_cbba_weighted_voronoi_memory10.toml  distributed_overlap_pressure_distributed_cbba_weighted_voronoi_memory5.toml  distributed_overlap_pressure_distributed_cbba_weighted_voronoi_range200.toml  distributed_overlap_pressure_distributed_cbba_weighted_voronoi_range350.toml  distributed_overlap_pressure_rho_weighted_voronoi.toml  hybrid_astar_baseline.toml  local_mpc_execution.toml  offshore_hotspot_pressure_aoi_energy_weighted_voronoi.toml  offshore_hotspot_pressure_basic.toml  offshore_hotspot_pressure_cost_aware.toml  offshore_hotspot_pressure_cost_aware_agent_failure.toml  offshore_hotspot_pressure_cost_aware_astar_smoother.toml  phase_one_baseline.toml  (+24 more)
(+252 files in other folders)
