[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usv-uav-marine-coverage"
version = "0.1.0"
description = "Python project scaffold for Codex-driven development."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "tom" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
]
rl = [
  "gymnasium>=1.2",
  "ray[rllib]>=2.54",
  "torch>=2.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
